compiler/testData/diagnostics/tests/callableReference/function/empty.kt
// FIR_IDENTICAL
class A

fun main() {
    konst x = :: <!SYNTAX!><!>;
    konst y = A::
<!SYNTAX!><!>}
